--- a/stylesheets/base.less
+++ b/stylesheets/base.less
@@ -1,3 +1,4 @@
+
 .warpee {
     width: 1024px;
     margin: 0 auto;
@@ -5,14 +6,17 @@
 .red {
     color: #f00;
 }
- .block{
-            display: block;
-        }
+.block {
+    display: block;
+}
 .center {
     text-align: center;
 }
 .radius {
     border-radius: 15px;
+}
+.radius-all {
+    border-radius: 50%;
 }
 .clear {
     clear: both;
@@ -71,6 +75,7 @@
         height: 0;
         padding-bottom: 20%;
         .img {
+           
             display: block;
             position: relative;
             width: 90%;
@@ -78,9 +83,9 @@
             margin: 5% auto;
             padding-bottom: 90%;
             .name {
-                .radius;
+                .radius-br;
+                .radius-bl;
                 .juzhong;
-                opacity: 0;
                 position: absolute;
                 border-bottom: 0;
                 left: 0;
@@ -88,7 +93,7 @@
                 color: #fff;
                 padding: 10px;
                 width: 100%;
-                height: 100%;
+                height: 20%;
                 background: rgba(0,0,0,.5);
                 width: 100%;
                 z-index: 2;
@@ -148,8 +153,7 @@
 }
 #hollow {
     width: 60%;
-    
-    margin:50px auto;
+    margin: 50px auto;
     ul {
         width: 100%;
         li {
@@ -157,19 +161,19 @@
             float: left;
             text-align: center;
             border: 1px solid #DCE6F0;
-           cursor:pointer;
+            cursor: pointer;
         }
     }
     .hollow-cont {
-      
-      
-        .content {display:none;
-             min-height: 200px;
+        .content {
+            display: none;
+            min-height: 200px;
             padding: 10px;
-              border: 1px solid #DCE6F0;
-              height:auto; overflow:hidden;
+            border: 1px solid #DCE6F0;
+            height: auto;
+            overflow: hidden;
         }
-        .block{
+        .block {
             display: block;
         }
     }
@@ -219,7 +223,6 @@
 }
 .W {
     .fl;
-  
     position: relative;
     top: 12.5px;
     left: 25px;
@@ -249,7 +252,8 @@
     border-color: #000000;
     border-style: solid;
 }
-.R {.fl;
+.R {
+    .fl;
     position: relative;
     top: 12.5px;
     left: 10px;
@@ -277,26 +281,247 @@
     height: 58px;
     background-color: #000000;
 }
-.D{.fl;
-position:relative;
-top:12.5px;
-left:10px;
-border-left:solid 15px #000000;
-height:125px;
+.D {
+    .fl;
+    position: relative;
+    top: 12.5px;
+    left: 10px;
+    border-left: solid 15px #000000;
+    height: 125px;
 }
-.D:before{
-position:absolute;
-content:'';
-top:0;
-left:0;
-width:60px;
-height:95px;
-border-width:15px 15px 15px 0;
-border-color:#000000;
-border-style:solid;
-border-radius:0 300% 300% 0 ;
+.D:before {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 60px;
+    height: 95px;
+    border-width: 15px 15px 15px 0;
+    border-color: #000000;
+    border-style: solid;
+    border-radius: 0 300% 300% 0;
 }
 .fl {
     float: left;
     margin: 10px;
+}
+.one,
+.two,
+.three {
+    opacity: 0.5;
+    position: relative;
+    width: 1024px;
+    height: 804px;
+    background: url("../img/bg.png") no-repeat center center;
+    background-size: 1024px 804px;
+}
+.two {
+    background: url("../img/bg-2.png") no-repeat center center;
+}
+.three {
+    background: url("../img/bg-3.png") no-repeat center center;
+}
+[class^="cri"] {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    opacity: 0;
+    background: url("../img/cri.gif") no-repeat;
+    background-size: 80% 80%;
+    //animation: myfirst 5s;
+}
+#nav{
+    display: none;
+    width:100%;
+    height:100px;
+    background:#ff0;
+    position:fixed;
+    top:0;
+    left:0;
+}
+.first {
+    position: fixed;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    .cont {
+        width: 100%;
+        height: 50%;
+        position: absolute;
+        background: #fff;
+        opacity: 0.1;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+    }
+}
+.perseon {
+    
+    height: 50%;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    .name {
+        .radius;
+        position: absolute;
+        top: 50px;
+        left: 0;
+        width: 200px;
+        height: 200px;
+        background: url(../img/head.png) no-repeat center center;
+        background-size:auto 100%;
+        animation: myfirst 3s;
+    }
+   .name-cont{
+       position:absolute;
+       bottom:0;
+       left:50%;
+       width:200px;
+       height:50px;
+       line-height:50px;
+       font-size:30px;
+       color:#000;
+       font-weight:bold;
+       text-align:center;
+       opacity: 0;
+   }
+   .personcont{
+       position:absolute;
+       width:400px;
+       height:80%;
+       padding:50px 0;
+       background:#ff0;
+       left:300px;
+   }
+}
+@keyframes myfirst {
+    from {
+        left: 200%;
+        opacity: 0;
+        top:0;
+    }
+    to {
+        top:50px;
+       left: 0%;
+        opacity: 1;
+        transform: rotate(360deg);
+    }
+}
+@-moz-keyframes myfirst 
+/* Firefox */
+{
+    from {
+        left: 200%;
+        opacity: 0;
+        top:0;
+    }
+    to {
+        top:50px;
+        left: 0%;
+        opacity: 1;
+        -moz-transform: rotate(360deg);
+    }
+}
+@-webkit-keyframes myfirst 
+/* Safari 和 Chrome */
+{
+    from {
+      left: 200%;
+        opacity: 0;
+        top:0;
+    }
+    to {
+    top:50px;
+        left: 0%;
+        opacity: 1;
+        -webkit-transform: rotate(360deg);
+    }
+}
+@-o-keyframes myfirst 
+/* Opera */
+{
+   from {
+      left: 200%;
+        opacity: 0;
+        top:0;
+    }
+    to {
+       top:50px;
+       left: 0%;
+        opacity: 1;
+        -o-transform: rotate(360deg);
+    }
+}
+.second {
+    position: fixed;
+    bottom: -100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    .cont {
+        width: 100%;
+        height: 70%;
+        position: absolute;
+        background: rgba(255,255,255,.9);
+        top: 0;
+        bottom: 0;
+        margin: auto;
+    }
+}
+.demo{
+    width:1000px;
+    margin:10px auto;
+    li{ .box-shadow;
+       .radius-all;
+       position:relative;
+        display:inline-block;
+        width:18%;
+        height:0;
+        margin:1%;
+        padding-bottom:18%;
+        background:#000;
+        overflow:hidden;
+        span.titleli{
+            .juzhong;
+            position: absolute;
+            width:100%;
+            height:50%;
+            padding:0 15%;
+            top:-50%;
+            left:0;
+            background:rgba(0,0,0,0.5);
+            text-align:center;
+            color:#fff; 
+        }
+        a.befor{
+            .juzhong;
+            position: absolute;
+            width:50%;
+            height:50%;
+            bottom:0;
+            left:-50%;
+            background:rgba(0,0,0,0.5);
+            text-align:center;
+            color:#fff;
+        
+        }
+        a.after{
+            .juzhong;
+            position: absolute;
+            width:50%;
+            height:50%;
+            bottom:0;
+            right:-50%;
+            background:rgba(0,0,0,0.5);
+            text-align:center;
+             color:#fff;
+        }
+        img{
+            width:100%;
+        }
+    }
 }
